Get Servers By UserID
