# controllers/server_controller.go
@@ -47,3 +47,34 @@ func CreateServer(c *gin.Context) {
 		"server":  server,
 	})
 }
+
+// GetServersByUserID godoc
+// @Summary    		Get User's Servers
+// @Description 	Get servers list by userID
+// @Tags 			Server
+// @Accept 			json
+// @Produce 		json
+// @Success      	200  {array} dtos.ServerResponse "Servers List"
+// @Failure 		400 {object} map[string]interface{} "invalid data"
+// @Failure      	401  {object} map[string]interface{} "unauthorized"
+// @Router       	/servers [get]
+func GetServersByUserID(c *gin.Context) {
+	userID, exists := c.Get("userId")
+	if !exists {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "user not found"})
+		return
+	}
+
+	userIDStr := userID.(string)
+
+	servers, err := services.GetServersByUserID(userIDStr)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+
+	}
+
+	response := dtos.ToServerResponses(servers)
+
+	c.JSON(http.StatusOK, response)
+}
